@@ -10,7 +10,7 @@ settings:
   rss_page: whats-new.html
   release_notes_autogen:
     release_notes_repo: workload-relnotes
-  langs: de-de,us-en,es-es,fr-fr,it-it,pt-br,ja-jp,ko-kr,zh-cn,zh-tw
+  langs: de-de,us-en,ja-jp,ko-kr,zh-cn,zh-tw,es-es,fr-fr,it-it
 sidebar:
   entries:
   - title: VMware-Workload-Dokumentation
@@ -29,6 +29,16 @@ sidebar:
       url: "/quick-start-native.html"
   - title: Nutzen Sie den VMware Migrationsberater
     entries:
+    - title: Migrieren Sie zu Amazon EC2
+      entries:
+      - title: Erfassung Ihrer aktuellen VM-Konfigurationen
+        url: "/capture-vm-configurations-native.html"
+      - title: Erstellen eines Implementierungsplans mithilfe des Migrationsberaters
+        url: "/launch-onboarding-advisor-native.html"
+      - title: Stellen Sie das empfohlene FSX für ONTAP-Dateisystem bereit
+        url: "/deploy-fsx-file-system.html"
+      - title: Migrieren Sie Ihre Daten zur neuen Infrastruktur
+        url: "/migrate-data-native.html"
     - title: Migrieren Sie zu VMware Cloud on AWS
       entries:
       - title: Erfassung Ihrer aktuellen VM-Konfigurationen
@@ -41,16 +51,6 @@ sidebar:
         url: "/connect-sddc-to-fsx.html"
       - title: Migrieren Sie Ihre Daten zur neuen Infrastruktur
         url: "/migrate-data.html"
-    - title: Migrieren Sie zu Amazon EC2
-      entries:
-      - title: Erfassung Ihrer aktuellen VM-Konfigurationen
-        url: "/capture-vm-configurations-native.html"
-      - title: Erstellen eines Implementierungsplans mithilfe des Migrationsberaters
-        url: "/launch-onboarding-advisor-native.html"
-      - title: Stellen Sie das empfohlene FSX für ONTAP-Dateisystem bereit
-        url: "/deploy-fsx-file-system.html"
-      - title: Migrieren Sie Ihre Daten zur neuen Infrastruktur
-        url: "/migrate-data-native.html"
   - title: Wissen und Support
     entries:
     - title: Für den Support anmelden
